PLR-13: Fixed spacing in carousel

--- a/htdocs/content/themes/ncoa/assets/scss/components/_white-label.scss
+++ b/htdocs/content/themes/ncoa/assets/scss/components/_white-label.scss
@@ -443,7 +443,8 @@
     font-weight: 700;
     font-size: 1em;
     line-height: 1.3;
-    margin-top: 14px;
+    margin-top: 15px !important;
+    margin-bottom: 10px !important;
   }
 }
 
